// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VolumeControls > renders with default volume 1`] = `
<div>
  <div
    aria-label="Volume controls"
    class="flex items-center gap-4"
  >
    <button
      aria-label="Mute"
      class="text-primary-dark transition-colors hover:text-primary-sage dark:text-primary-light dark:hover:text-primary-sage"
    >
      <svg
        class="lucide lucide-volume2 h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
        />
        <path
          d="M16 9a5 5 0 0 1 0 6"
        />
        <path
          d="M19.364 18.364a9 9 0 0 0 0-12.728"
        />
      </svg>
    </button>
    <div
      aria-label="Volume slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="relative h-2 w-[374px] cursor-pointer rounded-lg bg-primary-light dark:bg-primary-sage/30"
      role="slider"
    >
      <div
        class="absolute h-full rounded-l-lg bg-primary-sage transition-[width] duration-75 dark:bg-primary-light"
        style="width: 50%;"
      />
      <div
        class="absolute top-1/2 h-4 w-4 -translate-y-1/2 rounded-full bg-primary-sage shadow-md transition-transform duration-75 hover:scale-110 dark:bg-primary-light"
        style="left: 50%; transform: translate(-50%, -50%);"
      />
    </div>
  </div>
</div>
`;

exports[`VolumeControls > renders with max volume 1`] = `
<div>
  <div
    aria-label="Volume controls"
    class="flex items-center gap-4"
  >
    <button
      aria-label="Mute"
      class="text-primary-dark transition-colors hover:text-primary-sage dark:text-primary-light dark:hover:text-primary-sage"
    >
      <svg
        class="lucide lucide-volume2 h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
        />
        <path
          d="M16 9a5 5 0 0 1 0 6"
        />
        <path
          d="M19.364 18.364a9 9 0 0 0 0-12.728"
        />
      </svg>
    </button>
    <div
      aria-label="Volume slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="relative h-2 w-[374px] cursor-pointer rounded-lg bg-primary-light dark:bg-primary-sage/30"
      role="slider"
    >
      <div
        class="absolute h-full rounded-l-lg bg-primary-sage transition-[width] duration-75 dark:bg-primary-light"
        style="width: 100%;"
      />
      <div
        class="absolute top-1/2 h-4 w-4 -translate-y-1/2 rounded-full bg-primary-sage shadow-md transition-transform duration-75 hover:scale-110 dark:bg-primary-light"
        style="left: 100%; transform: translate(-50%, -50%);"
      />
    </div>
  </div>
</div>
`;

exports[`VolumeControls > renders with zero volume 1`] = `
<div>
  <div
    aria-label="Volume controls"
    class="flex items-center gap-4"
  >
    <button
      aria-label="Mute"
      class="text-primary-dark transition-colors hover:text-primary-sage dark:text-primary-light dark:hover:text-primary-sage"
    >
      <svg
        class="lucide lucide-volume2 h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
        />
        <path
          d="M16 9a5 5 0 0 1 0 6"
        />
        <path
          d="M19.364 18.364a9 9 0 0 0 0-12.728"
        />
      </svg>
    </button>
    <div
      aria-label="Volume slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="relative h-2 w-[374px] cursor-pointer rounded-lg bg-primary-light dark:bg-primary-sage/30"
      role="slider"
    >
      <div
        class="absolute h-full rounded-l-lg bg-primary-sage transition-[width] duration-75 dark:bg-primary-light"
        style="width: 0%;"
      />
      <div
        class="absolute top-1/2 h-4 w-4 -translate-y-1/2 rounded-full bg-primary-sage shadow-md transition-transform duration-75 hover:scale-110 dark:bg-primary-light"
        style="left: 0%; transform: translate(-50%, -50%);"
      />
    </div>
  </div>
</div>
`;
